<?xml version="1.0"?>
<package format="2">
  <name>rviz-camera-manager</name>
  <version>0.0.0</version>
  <description>The rviz-camera-manager package</description>

  <author email="kyosuke.hiraizumi@ca-giken.com">Kyosuke Hiraizumi</author>
  <maintainer email="kyosuke.hiraizumi@ca-giken.com">CA-Giken</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>view_controller_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
